Context menu fixed
Added z-index: 9999 on the list-container div, so context menu can overlap the content-details div.

--- a/core/application/public/assets/css/admin.css
+++ b/core/application/public/assets/css/admin.css
@@ -518,7 +518,10 @@ div[class*='col-'] + div[class*='col-'] {
 }
 
 #admin-content #list-container{
-	
+	width: 20%;
+	bottom: 0;
+	position: fixed;
+	z-index: 9999;
 }
 
 #admin-content #list {
